// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render radio with label 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="radio-group-3-label"
      accessibilityRole="radiogroup"
      accessible={true}
      data-blade-component="radio-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          gap="spacing.0"
          maxHeight="36px"
          style={
            [
              {},
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.subdued.lowContrast"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="bold"
            lineHeight={50}
            numberOfLines={2}
            style={
              [
                {
                  "color": "hsla(217, 18%, 45%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "lineHeight": 16,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Radio group
          </Text>
          <View
            data-blade-component="visually-hidden"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(217, 56%, 17%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          style={
            [
              {},
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="base-box"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityDescribedBy="radio-1-helptext-2"
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                name="radio-group-3"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="a"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="radio-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.subtle.lowContrast"
                      data-blade-component="base-text"
                      fontFamily="text"
                      fontSize={100}
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(216, 27%, 36%, 1)",
                            "fontFamily": "Lato",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Remember password
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Radio /> should set disabled state with isDisabled 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="radio-group-10-label"
      accessibilityRole="radiogroup"
      accessible={true}
      data-blade-component="radio-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          gap="spacing.0"
          maxHeight="36px"
          style={
            [
              {},
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.subdued.lowContrast"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="bold"
            lineHeight={50}
            numberOfLines={2}
            style={
              [
                {
                  "color": "hsla(217, 18%, 45%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "lineHeight": 16,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Radio group
          </Text>
          <View
            data-blade-component="visually-hidden"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(217, 56%, 17%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          style={
            [
              {},
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="base-box"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityDescribedBy="radio-11-helptext-12"
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                name="radio-group-10"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="a"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="radio-icon-wrapper"
                      isChecked={false}
                      isDisabled={true}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.placeholder.lowContrast"
                      data-blade-component="base-text"
                      fontFamily="text"
                      fontSize={100}
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(214, 18%, 69%, 1)",
                            "fontFamily": "Lato",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Remember password
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
